gcc/testsuite/gdc.test/runnable/imports/test31a.d
module imports.test31a;

template Baz() {
    private void privfunc(){ }
}

